--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.5",
     "jquery": "^3.7.1"
   },
   "devDependencies": {
