--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.5",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "esbuild": "^0.25.2"
