Add a popup window to show a full post's content - Add bootstrap's modal component to show full post's content - Render the modal inside the home page's template - Add js to fill the modal with post's content and show it - Add CSS to style the modal

--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "app",
   "private": true,
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
+    "build:css": "sass --watch --load-path=node_modules app/assets/stylesheets/application.scss:app/assets/builds/application.css",
+    "watch": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets --watch",
+    "dev": "concurrently \"yarn watch\" \"yarn build:css\""
   },
   "dependencies": {
+    "@hotwired/turbo": "^8.0.13",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.5",
     "jquery": "^3.7.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "sass": "^1.87.0"
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "esbuild": "^0.25.2"
   }
 }
